<?xml version="1.0"?>
<package format="2">
  <name>tme_exploration</name>
  <version>0.0.0</version>
  <description>The tme_exploration package</description>
  <maintainer email="j@todo.todo">j</maintainer>

  <!-- acknowledgements
  <author>Charles DuHadway</author>
  <url>http://ros.org/wiki/explore</url>
  <author>Paul Bovbel</author>
  <url>https://github.com/paulbovbel/frontier_exploration</url>
  <author>Jiri Horner</author>
  <url>https://github.com/hrnr/m-explore</url>
  -->

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>

  <depend>multirobot_map_merge</depend>
  <depend>robot_state_publisher</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
